# mtg-scan-nn

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-18-mtg-card-encoder.md
scripts/: download_data.sh  release.sh  run_all.sh  setup.sh  train_full.sh
src/: augment.py  benchmark.py  config.py  dataset.py  device.py  download_images.py  embed_binary.py  evaluate.py  export.py  losses.py  model.py  scryfall.py  train.py
tests/: test_augment.py  test_dataset.py  test_embed_binary.py  test_export.py  test_losses.py  test_model.py  test_real_world_photos.py  test_scryfall.py
tests/fixtures/real_photos/: README.md
